Update sassdoc type annotations

--- a/src/list/_sort.sass
+++ b/src/list/_sort.sass
@@ -16,7 +16,7 @@
 ///
 /// The list that define the sort order for UTF-16 code units.
 ///
-/// @type {List}
+/// @type List
 ///
 /// @access private
 ///
@@ -197,7 +197,7 @@ $_order: list.join($_order, '{' '|' '}' '~')
 ///
 /// The default comparison function used by the sort function.
 ///
-/// @type {Function}
+/// @type Function
 ///
 /// @access public
 /// @require _default-compare
@@ -208,7 +208,7 @@ $compare: meta.get-function('_default-compare')
 ///
 /// The default descending comparison function used by the sort function.
 ///
-/// @type {Function}
+/// @type Function
 ///
 /// @access public
 /// @require _default-compare-desc
@@ -219,7 +219,7 @@ $compare-desc: meta.get-function('_default-compare-desc')
 ///
 /// The numeric comparison function used by the sort function.
 ///
-/// @type {Function}
+/// @type Function
 ///
 /// @access public
 /// @require _numeric-compare
@@ -230,7 +230,7 @@ $compare-numeric: meta.get-function('_numeric-compare')
 ///
 /// The numeric descending comparison function used by the sort function.
 ///
-/// @type {Function}
+/// @type Function
 ///
 /// @access public
 /// @require _numeric-compare-desc
