--- a/test/index.sass
+++ b/test/index.sass
@@ -8,33 +8,33 @@
 
 // Required by 'src/internal/exception'
 // Required by 'src/list/to-string'
-@import 'list/join'
+@forward 'list/join'
 // Required by 'src/list/includes'
-@import 'list/index'
+@forward 'list/index'
 // Required by 'src/list/remove-nth'
 // Required by 'src/list/sort'
-@import 'list/slice'
+@forward 'list/slice'
 // Required by 'src/list/distinct'
-@import 'list/filter'
+@forward 'list/filter'
 // Required by 'src/list/replace'
-@import 'list/map'
+@forward 'list/map'
 // Required by 'src/list/remove'
-@import 'list/remove-nth'
-@import 'list/concat'
-@import 'list/distinct'
-@import 'list/every'
-@import 'list/find-nth'
-@import 'list/find'
-@import 'list/flat'
-@import 'list/includes'
-@import 'list/insert-nth'
-@import 'list/last-index'
-@import 'list/prepend'
-@import 'list/reduce-right'
-@import 'list/reduce'
-@import 'list/remove'
-@import 'list/replace'
-@import 'list/reverse'
-@import 'list/some'
-@import 'list/sort'
-@import 'list/to-string'
+@forward 'list/remove-nth'
+@forward 'list/concat'
+@forward 'list/distinct'
+@forward 'list/every'
+@forward 'list/find-nth'
+@forward 'list/find'
+@forward 'list/flat'
+@forward 'list/includes'
+@forward 'list/insert-nth'
+@forward 'list/last-index'
+@forward 'list/prepend'
+@forward 'list/reduce-right'
+@forward 'list/reduce'
+@forward 'list/remove'
+@forward 'list/replace'
+@forward 'list/reverse'
+@forward 'list/some'
+@forward 'list/sort'
+@forward 'list/to-string'
