Add linting for spelling

--- a/src/internal/_list.sass
+++ b/src/internal/_list.sass
@@ -9,7 +9,7 @@
 
 
 ///
-/// Initialise a new list matching the bracket style of another list.
+/// Initialize a new list matching the bracket style of another list.
 ///
 /// @param {List} $list - The list to match.
 /// @return {List}
