Correct @forward statement to @use

--- a/test/index.sass
+++ b/test/index.sass
@@ -8,33 +8,33 @@
 
 // Required by 'src/internal/exception'
 // Required by 'src/list/to-string'
-@forward 'list/join'
+@use 'list/join'
 // Required by 'src/list/includes'
-@forward 'list/index'
+@use 'list/index'
 // Required by 'src/list/remove-nth'
 // Required by 'src/list/sort'
-@forward 'list/slice'
+@use 'list/slice'
 // Required by 'src/list/distinct'
-@forward 'list/filter'
+@use 'list/filter'
 // Required by 'src/list/replace'
-@forward 'list/map'
+@use 'list/map'
 // Required by 'src/list/remove'
-@forward 'list/remove-nth'
-@forward 'list/concat'
-@forward 'list/distinct'
-@forward 'list/every'
-@forward 'list/find-nth'
-@forward 'list/find'
-@forward 'list/flat'
-@forward 'list/includes'
-@forward 'list/insert-nth'
-@forward 'list/last-index'
-@forward 'list/prepend'
-@forward 'list/reduce-right'
-@forward 'list/reduce'
-@forward 'list/remove'
-@forward 'list/replace'
-@forward 'list/reverse'
-@forward 'list/some'
-@forward 'list/sort'
-@forward 'list/to-string'
+@use 'list/remove-nth'
+@use 'list/concat'
+@use 'list/distinct'
+@use 'list/every'
+@use 'list/find-nth'
+@use 'list/find'
+@use 'list/flat'
+@use 'list/includes'
+@use 'list/insert-nth'
+@use 'list/last-index'
+@use 'list/prepend'
+@use 'list/reduce-right'
+@use 'list/reduce'
+@use 'list/remove'
+@use 'list/replace'
+@use 'list/reverse'
+@use 'list/some'
+@use 'list/sort'
+@use 'list/to-string'
