Update adjective in docs for $separator param

--- a/src/list/_concat.sass
+++ b/src/list/_concat.sass
@@ -13,8 +13,8 @@
 /// Merges two or more lists into a new list.
 ///
 /// @param {ArgList} $values - The lists or single values to concatenate.
-/// @param {String} $separator [auto] - The type of separator to be used by the extracted list. Must be passed by name.
-/// @param {Boolean | String} $bracketed [auto] - The type of brackets to be used by the extracted list. Must be passed by name.
+/// @param {String} $separator [auto] - The type of separator to be used by the merged list. Must be passed by name.
+/// @param {Boolean | String} $bracketed [auto] - The type of brackets to be used by the merged list. Must be passed by name.
 /// @return {List}
 ///
 /// @throw Must be "space", "comma", or "auto".
