--- a/src/list/_flat.sass
+++ b/src/list/_flat.sass
@@ -15,7 +15,7 @@
 ///
 /// @param {List} $list - The list to be flattened.
 /// @param {Number} $depth - The value indicating how deep a nested list structure should be flattened.
-/// @param {String} $separator [auto] - The type of separator to be used by the extracted list.
+/// @param {String} $separator [auto] - The type of separator to be used by the flattened list.
 /// @return {List}
 ///
 /// @throw `#{$depth}` is not a number.
@@ -49,7 +49,7 @@
 ///
 /// @param {List} $list - The list to be flattened.
 /// @param {Number} $depth - The value indicating how deep a nested list structure should be flattened.
-/// @param {String} $separator [auto] - The type of separator to be used by the extracted list.
+/// @param {String} $separator [auto] - The type of separator to be used by the flattened list.
 /// @param {Number} $at-depth - The depth at which the current list is being flattened.
 /// @return {List}
 ///
