Add empty function

--- a/src/index.sass
+++ b/src/index.sass
@@ -6,6 +6,7 @@
 
 @forward 'list/concat'
 @forward 'list/distinct'
+@forward 'list/empty'
 @forward 'list/every'
 @forward 'list/filter'
 @forward 'list/find-nth'
