--- a/test/index.sass
+++ b/test/index.sass
@@ -22,6 +22,7 @@
 @use 'list/remove-nth'
 @use 'list/concat'
 @use 'list/distinct'
+@use 'list/empty'
 @use 'list/every'
 @use 'list/find-nth'
 @use 'list/find'
