Update $bracketed param docs

--- a/src/list/_empty.sass
+++ b/src/list/_empty.sass
@@ -13,7 +13,7 @@
 /// Creates an empty list with the specified characteristics.
 ///
 /// @param {String} $separator [comma] - The type of separator to be used by the empty list.
-/// @param {Boolean} $bracketed [false] - The type of brackets to be used by the empty list.
+/// @param {Boolean} $bracketed [false] - Whether the empty list has square brackets or no brackets.
 /// @return {List}
 ///
 /// @throw Must be "space", "comma", or "auto".
