--- a/src/list/_concat.sass
+++ b/src/list/_concat.sass
@@ -14,7 +14,7 @@
 ///
 /// @param {ArgList} $values - The lists or single values to concatenate.
 /// @param {String} $separator [auto] - The type of separator to be used by the merged list. Must be passed by name.
-/// @param {Boolean | String} $bracketed [auto] - The type of brackets to be used by the merged list. Must be passed by name.
+/// @param {Boolean | String} $bracketed [auto] - Whether the merged list has square brackets or no brackets. Must be passed by name.
 /// @return {List}
 ///
 /// @throw Must be "space", "comma", or "auto".
