--- a/src/list/_reverse.sass
+++ b/src/list/_reverse.sass
@@ -23,7 +23,7 @@
 	@if $length < 2
 		@return $list
 
-	@for $i from 1 through math.floor($length / 2)
+	@for $i from 1 through math.floor(math.div($length, 2))
 		$item: list.nth($list, $i)
 		$list: list.set-nth($list, $i, list.nth($list, $i * -1))
 		$list: list.set-nth($list, $i * -1, $item)
