Update `$separator` parameters to support `slash`

--- a/src/internal/_exception.sass
+++ b/src/internal/_exception.sass
@@ -60,4 +60,4 @@ $function: null
 /// @require param
 ///
 @function separator()
-	@return param('Must be "space", "comma", or "auto"', 'separator')
+	@return param('Must be "space", "comma", "slash", or "auto"', 'separator')
