--- a/src/internal/_param.sass
+++ b/src/internal/_param.sass
@@ -34,7 +34,7 @@
 /// @access public
 ///
 @function separator-is-invalid($value)
-	@return $value != space and $value != comma and $value != auto
+	@return $value != space and $value != comma and $value != slash and $value != auto
 
 
 ///
