--- a/src/list/_distinct.sass
+++ b/src/list/_distinct.sass
@@ -18,7 +18,7 @@
 /// @param {String} $separator [auto] - The type of separator to be used by the extracted list.
 /// @return {List}
 ///
-/// @throw Must be "space", "comma", or "auto".
+/// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
 /// @require _distinct-predicate
