--- a/src/list/_empty.sass
+++ b/src/list/_empty.sass
@@ -16,7 +16,7 @@
 /// @param {Boolean} $bracketed [false] - Whether the empty list has square brackets or no brackets.
 /// @return {List}
 ///
-/// @throw Must be "space", "comma", or "auto".
+/// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
 ///
