--- a/src/list/_flat.sass
+++ b/src/list/_flat.sass
@@ -20,7 +20,7 @@
 ///
 /// @throw `#{$depth}` is not a number.
 /// @throw The depth may not be less than 1.
-/// @throw Must be "space", "comma", or "auto".
+/// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
 /// @require internal.$exception-function
