--- a/src/list/_concat.sass
+++ b/src/list/_concat.sass
@@ -17,7 +17,7 @@
 /// @param {Boolean | String} $bracketed [auto] - Whether the merged list has square brackets or no brackets. Must be passed by name.
 /// @return {List}
 ///
-/// @throw Must be "space", "comma", or "auto".
+/// @throw Must be "space", "comma", "slash", or "auto".
 /// @throw The beginning index is not less than the length of the list.
 ///
 /// @access public
