--- a/src/list/_filter.sass
+++ b/src/list/_filter.sass
@@ -20,7 +20,7 @@
 /// @return {List}
 ///
 /// @throw `#{$predicate}` is not a function.
-/// @throw Must be "space", "comma", or "auto".
+/// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
 /// @require internal.$exception-function
