--- a/src/list/_prepend.sass
+++ b/src/list/_prepend.sass
@@ -17,7 +17,7 @@
 /// @param {String} $separator [auto] - The type of separator to be used by the copied list.
 /// @return {List}
 ///
-/// @throw Must be "space", "comma", or "auto".
+/// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
 /// @require internal.$exception-function
