--- a/src/list/_slice.sass
+++ b/src/list/_slice.sass
@@ -25,7 +25,7 @@
 /// @throw Invalid index #{$start-at} for a list with #{$length} elements.
 /// @throw Invalid index #{$end-at} for a list with #{$length} elements.
 /// @throw The starting index is not less than the ending index.
-/// @throw Must be "space", "comma", or "auto".
+/// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @example scss
 /// 	slice([a, b, c, d], 3) //=> [c, d]
