--- a/test/list/_empty.sass
+++ b/test/list/_empty.sass
@@ -12,7 +12,7 @@
 
 @include true.describe('@function src.empty')
 
-	@include true.it('Creates an comma-separated, unbracketed list')
+	@include true.it('Creates a comma-separated, unbracketed list')
 		$result: src.empty()
 		$assert: list.separator($result) == comma and not list.is-bracketed($result)
 		$expected: true
@@ -38,7 +38,7 @@
 		$expected: true
 		@include true.assert-equal($assert, $expected)
 
-	@include true.it('Creates an comma-separated, bracketed list')
+	@include true.it('Creates a comma-separated, bracketed list')
 		$result: src.empty(comma, true)
 		$assert: list.separator($result) == comma and list.is-bracketed($result)
 		$expected: true
@@ -59,7 +59,7 @@
 		$expected: true
 		@include true.assert-equal($assert, $expected)
 
-	@include true.it('Creates an space-separated, unbracketed list')
+	@include true.it('Creates a space-separated, unbracketed list')
 		$result: src.empty(space)
 		$assert: list.separator($result) == space and not list.is-bracketed($result)
 		$expected: true
@@ -75,7 +75,7 @@
 		$expected: true
 		@include true.assert-equal($assert, $expected)
 
-	@include true.it('Creates an space-separated, bracketed list')
+	@include true.it('Creates a space-separated, bracketed list')
 		$result: src.empty(space, true)
 		$assert: list.separator($result) == space and list.is-bracketed($result)
 		$expected: true
@@ -88,5 +88,37 @@
 
 		$result: src.empty($bracketed: true, $separator: space)
 		$assert: list.separator($result) == space and list.is-bracketed($result)
+		$expected: true
+		@include true.assert-equal($assert, $expected)
+
+	@include true.it('Creates a slash-separated, unbracketed list')
+		$result: src.empty(slash)
+		$assert: list.separator($result) == slash and not list.is-bracketed($result)
+		$expected: true
+		@include true.assert-equal($assert, $expected)
+
+		$result: src.empty(slash, false)
+		$assert: list.separator($result) == slash and not list.is-bracketed($result)
+		$expected: true
+		@include true.assert-equal($assert, $expected)
+
+		$result: src.empty($bracketed: false, $separator: slash)
+		$assert: list.separator($result) == slash and not list.is-bracketed($result)
+		$expected: true
+		@include true.assert-equal($assert, $expected)
+
+	@include true.it('Creates a slash-separated, bracketed list')
+		$result: src.empty(slash, true)
+		$assert: list.separator($result) == slash and list.is-bracketed($result)
+		$expected: true
+		@include true.assert-equal($assert, $expected)
+
+		$result: src.empty(slash, auto)
+		$assert: list.separator($result) == slash and list.is-bracketed($result)
+		$expected: true
+		@include true.assert-equal($assert, $expected)
+
+		$result: src.empty($bracketed: true, $separator: slash)
+		$assert: list.separator($result) == slash and list.is-bracketed($result)
 		$expected: true
 		@include true.assert-equal($assert, $expected)
