--- a/test/list/_flat.sass
+++ b/test/list/_flat.sass
@@ -5,6 +5,7 @@
 /// @group tests
 ////
 
+@use 'sass:list'
 @use 'src'
 @use 'true'
 
@@ -30,3 +31,7 @@
 		$assert: src.flat($expected, 2, space)
 		$expected: 15 14 13 12 11 10 9 8 7 6 5 4 3 2 1
 		@include true.assert-equal($assert, $expected, '[space]')
+
+		$assert: src.flat($list, 2, slash)
+		$expected: list.slash(15, 14, 13, 12, 11, 10, (9 8), 7, (6 5), 4, 3, 2, 1)
+		@include true.assert-equal($assert, $expected, '[slash]')
