--- a/test/list/_prepend.sass
+++ b/test/list/_prepend.sass
@@ -5,6 +5,7 @@
 /// @group tests
 ////
 
+@use 'sass:list'
 @use 'src'
 @use 'true'
 
@@ -22,13 +23,17 @@
 		@include true.assert-equal($assert, $expected)
 
 	@include true.it('Add an item to the beginning of a list changing the separator')
-		$assert: src.prepend(('a', 'b', 'c', 'd'), 'e')
+		$assert: src.prepend(('a' 'b' 'c' 'd'), 'e', $separator: comma)
 		$expected: 'e', 'a', 'b', 'c', 'd'
-		@include true.assert-equal($assert, $expected)
+		@include true.assert-equal($assert, $expected, '[comma]')
 
 		$assert: src.prepend($assert, 'f', $separator: space)
 		$expected: 'f' 'e' 'a' 'b' 'c' 'd'
-		@include true.assert-equal($assert, $expected)
+		@include true.assert-equal($assert, $expected, '[space]')
+
+		$assert: src.prepend($assert, 'g', $separator: slash)
+		$expected: list.slash('g', 'f', 'e', 'a', 'b', 'c', 'd')
+		@include true.assert-equal($assert, $expected, '[slash]')
 
 	@include true.it('Add a list to the beginning of a list')
 		$assert: src.prepend('d' 'e' 'f', 'a' 'b' 'c')
