--- a/test/list/_join.sass
+++ b/test/list/_join.sass
@@ -5,6 +5,7 @@
 /// @group tests
 ////
 
+@use 'sass:list'
 @use 'src'
 @use 'true'
 
@@ -19,6 +20,11 @@
 	@include true.it('Automatically selects comma for glue')
 		$assert: src.join([10px, 20px 'a'])
 		$expected: '10px,20px,a'
+		@include true.assert-equal($assert, $expected)
+
+	@include true.it('Automatically selects slash for glue')
+		$assert: src.join(list.slash(10px, 20px, 'a'))
+		$expected: '10px/20px/a'
 		@include true.assert-equal($assert, $expected)
 
 	@include true.it('Use specified string for glue')
