--- a/test/list/_to-string.sass
+++ b/test/list/_to-string.sass
@@ -5,18 +5,24 @@
 /// @group tests
 ////
 
+@use 'sass:list'
 @use 'src'
 @use 'true'
 
 
 @include true.describe('@function src.to-string')
 
-	@include true.it('Return the space delimited representation of a list')
+	@include true.it('Return the space-delimited representation of a list')
 		$assert: src.to-string([10px 20px 'a'])
 		$expected: '10px 20px a'
 		@include true.assert-equal($assert, $expected)
 
-	@include true.it('Return the comma delimited representation of a list')
+	@include true.it('Return the comma-delimited representation of a list')
 		$assert: src.to-string([10px, 20px 'a'])
 		$expected: '10px,20px,a'
+		@include true.assert-equal($assert, $expected)
+
+	@include true.it('Return the slash-delimited representation of a list')
+		$assert: src.to-string(list.slash(10px, 20px, 'a'))
+		$expected: '10px/20px/a'
 		@include true.assert-equal($assert, $expected)
