--- a/test/list/_join.sass
+++ b/test/list/_join.sass
@@ -18,7 +18,7 @@
 		@include true.assert-equal($assert, $expected)
 
 	@include true.it('Automatically selects comma for glue')
-		$assert: src.join([10px, 20px 'a'])
+		$assert: src.join([10px, 20px, 'a'])
 		$expected: '10px,20px,a'
 		@include true.assert-equal($assert, $expected)
 
@@ -32,12 +32,19 @@
 		$expected: '10px-20px-a'
 		@include true.assert-equal($assert, $expected)
 
-	@include true.it('Include nested lists')
-		$assert: src.join([10px 20px 'a' (#fff, rgb(127, 127, 127), #000)], ' ?? ')
+	@include true.it('Exclude nested lists')
+		$list: [10px 20px 'a' (#fff, rgb(127, 127, 127), #000)]
+
+		$assert: src.join($list, ' ?? ')
+		$expected: '10px ?? 20px ?? a ?? #fff, #7f7f7f, #000'
+		@include true.assert-equal($assert, $expected)
+
+		$assert: src.flat($list)
+		$assert: src.join($assert, ' ?? ')
 		$expected: '10px ?? 20px ?? a ?? #fff ?? #7f7f7f ?? #000'
 		@include true.assert-equal($assert, $expected)
 
 	@include true.it('Convert the glue to a string')
-		$assert: src.join([10px, 20px 'a'], rgb(127, 127, 127))
+		$assert: src.join([10px, 20px, 'a'], rgb(127, 127, 127))
 		$expected: '10px#7f7f7f20px#7f7f7fa'
 		@include true.assert-equal($assert, $expected)
