Add missing `@group` indicator

--- a/src/internal/_index.sass
+++ b/src/internal/_index.sass
@@ -2,6 +2,7 @@
 // Licensed under the MIT. See LICENSE file in the project root for full license information.
 ////
 /// @author roydukkey
+/// @group internal
 ////
 
 @forward 'exception' as exception-*
