--- a/src/list/_empty.sass
+++ b/src/list/_empty.sass
@@ -19,6 +19,9 @@
 /// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
+/// @require internal.$exception-function
+/// @require internal.param-separator-is-invalid
+/// @require internal.exception-separator
 ///
 @function empty($separator: comma, $bracketed: false)
 	internal.$exception-function: 'empty'
