--- a/test/list/_every.sass
+++ b/test/list/_every.sass
@@ -33,28 +33,22 @@
 
 	@include true.it('Predicate matches every item in a list')
 		$assert: src.every(16 32 64 128 256, meta.get-function('_greater-than-ten'))
-		$expected: true
-		@include true.assert-equal($assert, $expected)
+		@include true.assert-true($assert)
 
 	@include true.it('Predicate does not match any items in a list')
 		$assert: src.every(2 4 6 8, meta.get-function('_greater-than-ten'))
-		$expected: false
-		@include true.assert-equal($assert, $expected)
+		@include true.assert-false($assert)
 
 	@include true.it('Predicate receives the item indexes')
 		$assert: src.every(16 32 64 128 256, meta.get-function('_greater-than-index'))
-		$expected: true
-		@include true.assert-equal($assert, $expected, '[16 32 64 128 256]')
+		@include true.assert-true($assert, '[16 32 64 128 256]')
 
 		$assert: src.every(1 1 1 1 1, meta.get-function('_greater-than-index'))
-		$expected: false
-		@include true.assert-equal($assert, $expected, '[1 1 1 1 1]')
+		@include true.assert-false($assert, '[1 1 1 1 1]')
 
 	@include true.it('Predicate receives the calling list')
 		$assert: src.every(1 2 1 2 1 2 1 2, meta.get-function('_equals-2n-plus-index'))
-		$expected: true
-		@include true.assert-equal($assert, $expected, '[1 2 1 2 1 2 1 2]')
+		@include true.assert-true($assert, '[1 2 1 2 1 2 1 2]')
 
 		$assert: src.every(2 1 1 2 1 2 1 2, meta.get-function('_equals-2n-plus-index'))
-		$expected: false
-		@include true.assert-equal($assert, $expected, '[2 1 1 2 1 2 1 2]')
+		@include true.assert-false($assert, '[2 1 1 2 1 2 1 2]')
