--- a/test/list/_some.sass
+++ b/test/list/_some.sass
@@ -31,28 +31,22 @@
 
 	@include true.it('Predicate matches some items in a list')
 		$assert: src.some(2 4 6 8 16, meta.get-function('_greater-than-ten'))
-		$expected: true
-		@include true.assert-equal($assert, $expected)
+		@include true.assert-true($assert)
 
 	@include true.it('Predicate does not match any items in a list')
 		$assert: src.some(2 4 6 8, meta.get-function('_greater-than-ten'))
-		$expected: false
-		@include true.assert-equal($assert, $expected)
+		@include true.assert-false($assert)
 
 	@include true.it('Predicate receives the item indexes')
 		$assert: src.some(2 4 6 8 16, meta.get-function('_greater-than-index'))
-		$expected: true
-		@include true.assert-equal($assert, $expected, '[2 4 6 8 16]')
+		@include true.assert-true($assert, '[2 4 6 8 16]')
 
 		$assert: src.some(1 1 1 1 1, meta.get-function('_greater-than-index'))
-		$expected: false
-		@include true.assert-equal($assert, $expected, '[1 1 1 1 1]')
+		@include true.assert-false($assert, '[1 1 1 1 1]')
 
 	@include true.it('Predicate receives the calling list')
 		$assert: src.some(1 2 3 1 2 1 4 5, meta.get-function('_equals-2n-plus-index'))
-		$expected: true
-		@include true.assert-equal($assert, $expected, '[1 2 3 1 2 1 4 5]')
+		@include true.assert-true($assert, '[1 2 3 1 2 1 4 5]')
 
 		$assert: src.some(2 1 1 2 2 1 1 2, meta.get-function('_equals-2n-plus-index'))
-		$expected: false
-		@include true.assert-equal($assert, $expected, '[2 1 1 2 2 1 1 2]')
+		@include true.assert-false($assert, '[2 1 1 2 2 1 1 2]')
