--- a/test/_api-combined.sass
+++ b/test/_api-combined.sass
@@ -17,10 +17,8 @@
 
 	@include true.it('Has access to native list.append() as module function')
 		$assert: map.has-key($module-functions, 'append')
-		$expected: true
-		@include true.assert-equal($assert, $expected)
+		@include true.assert-true($assert, '[append]')
 
-	@include true.it('Has access to native src.prepend() as module function')
+	@include true.it("Has access to library's src.prepend() as module function")
 		$assert: map.has-key($module-functions, 'prepend')
-		$expected: true
-		@include true.assert-equal($assert, $expected)
+		@include true.assert-true($assert, '[prepend]')
