--- a/test/list/_sort.sass
+++ b/test/list/_sort.sass
@@ -59,12 +59,12 @@
 
 	$unitless: 1 -9 3 5 0 6 4 2 60 5 7
 
-	@include true.it('Order numbers with numeric sort in ascending order')
+	@include true.it('Order unitless numbers with numeric sort in ascending order')
 		$assert: src.sort($unitless, src.$compare-numeric)
 		$expected: -9 0 1 2 3 4 5 5 6 7 60
 		@include true.assert-equal($assert, $expected)
 
-	@include true.it('Order numbers with numeric sort in descending order')
+	@include true.it('Order unitless numbers with numeric sort in descending order')
 		$assert: src.sort($unitless, src.$compare-numeric-desc)
 		$expected: 60 7 6 5 5 4 3 2 1 0 -9
 		@include true.assert-equal($assert, $expected)
@@ -77,4 +77,16 @@
 	@include true.it('Order items keeping the same separator')
 		$assert: src.sort(('Three', 'Two', 'Five', 'Six', 'Four', 'One'))
 		$expected: 'Five', 'Four', 'One', 'Six', 'Three', 'Two'
+		@include true.assert-equal($assert, $expected)
+
+	$compatible: 6mm 2px 10mm -9mm 25px 1cm -4px -3cm
+
+	@include true.it('Order compatible numbers automatically with numeric sort in ascending order')
+		$assert: src.sort($compatible, src.$compare-numeric)
+		$expected: -3cm -9mm -4px 2px 6mm 25px 1cm 10mm
+		@include true.assert-equal($assert, $expected)
+
+	@include true.it('Order compatible numbers automatically with numeric sort in descending order')
+		$assert: src.sort($compatible, src.$compare-numeric-desc)
+		$expected: 1cm 10mm 25px 6mm 2px -4px -9mm -3cm
 		@include true.assert-equal($assert, $expected)
