--- a/test/index.sass
+++ b/test/index.sass
@@ -16,6 +16,8 @@
 @use 'list/slice'
 // Required by 'src/list/distinct'
 @use 'list/filter'
+// Required by 'src/list/sort'
+@use 'list/find'
 // Required by 'src/list/replace'
 @use 'list/map'
 // Required by 'src/list/remove'
@@ -25,7 +27,6 @@
 @use 'list/empty'
 @use 'list/every'
 @use 'list/find-nth'
-@use 'list/find'
 @use 'list/flat'
 @use 'list/includes'
 @use 'list/insert-nth'
