--- a/test/list/_sort.sass
+++ b/test/list/_sort.sass
@@ -5,6 +5,7 @@
 /// @group tests
 ////
 
+@use 'sass:list'
 @use 'src'
 @use 'true'
 
@@ -90,3 +91,81 @@
 		$assert: src.sort($compatible, src.$compare-numeric-desc)
 		$expected: 1cm 10mm 25px 6mm 2px -4px -9mm -3cm
 		@include true.assert-equal($assert, $expected)
+
+	@include true.it('Order compatible numbers certainly with numeric sort in ascending order')
+		$assert: src.sort($compatible, src.$compare-numeric, auto)
+		$expected: -3cm -9mm -4px 2px 6mm 25px 1cm 10mm
+		@include true.assert-equal($assert, $expected, '[auto >> 0mm]')
+
+		$assert: src.sort($compatible, src.$compare-numeric, 0px)
+		$expected: -3cm -9mm -4px 2px 6mm 25px 1cm 10mm
+		@include true.assert-equal($assert, $expected, '[0px]')
+
+		$assert: src.sort($compatible, src.$compare-numeric, 0)
+		$expected: -9mm -4px -3cm 1cm 2px 6mm 10mm 25px
+		@include true.assert-equal($assert, $expected, '[0]')
+
+	@include true.it('Order compatible numbers certainly with numeric sort in descending order')
+		$assert: src.sort($compatible, src.$compare-numeric-desc, auto)
+		$expected: 1cm 10mm 25px 6mm 2px -4px -9mm -3cm
+		@include true.assert-equal($assert, $expected, '[auto >> 0mm]')
+
+		$assert: src.sort($compatible, src.$compare-numeric-desc, 0px)
+		$expected: 1cm 10mm 25px 6mm 2px -4px -9mm -3cm
+		@include true.assert-equal($assert, $expected, '[0px]')
+
+		$assert: src.sort($compatible, src.$compare-numeric-desc, 0)
+		$expected: 25px 10mm 6mm 2px 1cm -3cm -4px -9mm
+		@include true.assert-equal($assert, $expected, '[0]')
+
+	$incompatible: 6mm 2px 4em 20mm -9mm 2cm 25px 1.25cm -4px 1 -3cm
+
+	@include true.it('Order incompatible numbers automatically with numeric sort in ascending order')
+		$assert: src.sort($incompatible, src.$compare-numeric)
+		$expected: -3cm -9mm -4px 2px 1 4em 6mm 25px 1.25cm 2cm 20mm
+		@include true.assert-equal($assert, $expected, '[auto => 0mm]')
+
+		$assert: src.sort($assert, src.$compare-numeric)
+		$expected: -3cm -9mm -4px 2px 6mm 25px 1 1.25cm 20mm 2cm 4em
+		@include true.assert-equal($assert, $expected, '[auto => 0cm]')
+
+	@include true.it('Order incompatible numbers automatically with numeric sort in descending order')
+		$assert: src.sort($incompatible, src.$compare-numeric-desc)
+		$expected: 20mm 2cm 1.25cm 25px 6mm 4em 1 2px -4px -9mm -3cm
+		@include true.assert-equal($assert, $expected, '[auto => 0mm]')
+
+		$assert: src.sort($assert, src.$compare-numeric-desc)
+		$expected: 4em 2cm 20mm 1.25cm 1 25px 6mm 2px -4px -9mm -3cm
+		@include true.assert-equal($assert, $expected, '[auto => 0cm]')
+
+	@include true.it('Order incompatible numbers certainly with numeric sort in ascending order')
+		$assert: src.sort($incompatible, src.$compare-numeric, 'auto')
+		$expected: -3cm -9mm -4px 2px 1 4em 6mm 25px 1.25cm 2cm 20mm
+		@include true.assert-equal($assert, $expected, '[auto => 0mm]')
+
+		$assert: src.sort($incompatible, src.$compare-numeric, 0cm)
+		$expected: -3cm -9mm -4px 2px 6mm 25px 1 1.25cm 20mm 2cm 4em
+		@include true.assert-equal($assert, $expected, '[0cm]')
+
+		$assert: src.sort($incompatible, src.$compare-numeric, 0)
+		$expected: -9mm -4px -3cm 1 1.25cm 2cm 2px 4em 6mm 20mm 25px
+		@include true.assert-equal($assert, $expected, '[0]')
+
+	@include true.it('Order incompatible numbers certainly with numeric sort in descending order')
+		$assert: src.sort($incompatible, src.$compare-numeric-desc, auto)
+		$expected: 20mm 2cm 1.25cm 25px 6mm 4em 1 2px -4px -9mm -3cm
+		@include true.assert-equal($assert, $expected, '[auto => 0mm]')
+
+		$assert: src.sort($incompatible, src.$compare-numeric-desc, 0cm)
+		$expected: 4em 2cm 20mm 1.25cm 1 25px 6mm 2px -4px -9mm -3cm
+		@include true.assert-equal($assert, $expected, '[0cm]')
+
+		$assert: src.sort($incompatible, src.$compare-numeric-desc, 0)
+		$expected: 25px 20mm 6mm 4em 2cm 2px 1.25cm 1 -3cm -4px -9mm
+		@include true.assert-equal($assert, $expected, '[0]')
+
+	@include true.it('Determines proper units for automatic numeric sort with leading unitless numbers')
+		$incompatible: list.join(0 1 2 3 4 5, $incompatible)
+		$assert: src.sort($incompatible, src.$compare-numeric)
+		$expected: -3cm -9mm -4px 0 2px 1 1 2 3 4em 4 5 6mm 25px 1.25cm 2cm 20mm
+		@include true.assert-equal($assert, $expected, '[auto => 0mm]')
