Abstract readonly comparison methods

--- a/src/index.sass
+++ b/src/index.sass
@@ -2,8 +2,10 @@
 // Licensed under the MIT. See LICENSE file in the project root for full license information.
 ////
 /// @author roydukkey
+/// @group api
 ////
 
+@forward 'list/compare' as compare-*
 @forward 'list/concat'
 @forward 'list/distinct'
 @forward 'list/empty'
