--- a/src/list/_sort.sass
+++ b/src/list/_sort.sass
@@ -8,33 +8,17 @@
 @use 'sass:list'
 @use 'sass:math'
 @use 'sass:meta'
-@use 'sass:string'
 @use 'find'
 @use 'slice'
+@use 'compare'
 @use '../internal'
-
-
-///
-/// The list that define the sort order for UTF-16 code units.
-///
-/// @type List
-///
-/// @access private
-///
-$_order: '' ' ' '!' '"' '#' '$' '%' '&' "'" '(' ')' '*' '+' ',' '-' '.' '/'
-$_order: list.join($_order, '0' '1' '2' '3' '4' '5' '6' '7' '8' '9')
-$_order: list.join($_order, ':' ';' '<' '=' '>' '?' '@')
-$_order: list.join($_order, 'A' 'B' 'C' 'D' 'E' 'F' 'G' 'H' 'I' 'J' 'K' 'L' 'M' 'N' 'O' 'P' 'Q' 'R' 'S' 'T' 'U' 'V' 'W' 'X' 'Y' 'Z')
-$_order: list.join($_order, '[' '\\' ']' '^' '_' '`')
-$_order: list.join($_order, 'a' 'b' 'c' 'd' 'e' 'f' 'g' 'h' 'i' 'j' 'k' 'l' 'm' 'n' 'o' 'p' 'q' 'r' 's' 't' 'u' 'v' 'w' 'x' 'y' 'z')
-$_order: list.join($_order, '{' '|' '}' '~')
 
 
 ///
 /// Sorts the items of a list in place. The default sort order is ascending, built upon converting the items into strings, then comparing their sequences of UTF-16 code units values.
 ///
 /// @param {List} $list - The list to sort.
-/// @param {Function} $compare [$compare] - The function that defines the sort order. The first parameter is the first item for comparison. The second parameter is the second item for comparison. The returned value must be a number.
+/// @param {Function} $compare [compare.string()] - The function that defines the sort order. The first parameter is the first item for comparison. The second parameter is the second item for comparison. The returned value must be a number.
 /// @param {Number | String} $center [auto] - For numeric comparison, the value indicating the center (zero) position between positive and negative values. Based on either the specified center value or the first non-unitless value in the source list or zero, incompatible values will be automatically transformed into compatibility for comparison.
 /// @return {List}
 ///
@@ -44,24 +28,24 @@ $_order: list.join($_order, '{' '|' '}' '~')
 ///
 /// @example scss
 /// 	sort(c b e d a f) //=> a b c d e f
-/// 	sort(c b e d a f, src.$compare-desc) //=> f e d c b a
-/// 	sort([6mm 2px 10mm -9mm 25px 1cm -4px -3cm], src.$compare-numeric) //=> [-3cm -9mm -4px 2px 6mm 25px 1cm 10mm]
-/// 	sort(1cm 5mm 1 1mm 2em, src.$compare-numeric-desc, auto) //=> 2em 1 1cm 5mm 1mm
-/// 	sort(1cm 5mm 1 1mm 2em, src.$compare-numeric-desc, 0mm) //=> 1cm 5mm 2em 1mm 1
-/// 	sort(1cm 5mm 1 1mm 2em, src.$compare-numeric-desc, 0) //=> 5mm 2em 1mm 1 1cm
+/// 	sort(c b e d a f, src.compare-string-desc()) //=> f e d c b a
+/// 	sort([6mm 2px 10mm -9mm 25px 1cm -4px -3cm], src.compare-numeric()) //=> [-3cm -9mm -4px 2px 6mm 25px 1cm 10mm]
+/// 	sort(1cm 5mm 1 1mm 2em, src.compare-numeric-desc(), auto) //=> 2em 1 1cm 5mm 1mm
+/// 	sort(1cm 5mm 1 1mm 2em, src.compare-numeric-desc(), 0mm) //=> 1cm 5mm 2em 1mm 1
+/// 	sort(1cm 5mm 1 1mm 2em, src.compare-numeric-desc(), 0) //=> 5mm 2em 1mm 1 1cm
 ///
 /// @see @link https://github.com/roydukkey/sass-module-list/issues/7 for more information on `$center`.
 ///
 /// @access public
-/// @require $compare
 /// @require _order
+/// @require compare.string
+/// @require find.find
 /// @require internal.$exception-function
 /// @require internal.exception-param
 /// @require internal.exception-type
-/// @require find.find
 /// @require slice.slice
 ///
-@function sort($list, $compare: $compare, $center: auto)
+@function sort($list, $compare: compare.string(), $center: auto)
 	internal.$exception-function: 'sort'
 
 	@if meta.type-of($compare) != 'function'
@@ -126,160 +110,6 @@ $_order: list.join($_order, '{' '|' '}' '~')
 	$remainder: if($left-index < $right-index, slice.slice($left, $left-index), slice.slice($right, $right-index))
 
 	@return list.join($result, $remainder, $separator: list.separator($left))
-
-
-///
-/// Used to compare two non-null list items by converting them to strings and comparing strings in ascending UTF-16 code units order from `feff0020` to `feff007e`. For example, 'banana' comes before 'cherry'. In a numeric sort, 9 comes before 80, but because numbers are converted to strings, '80' comes before '9' in the Unicode order. All null items are sorted to the end of the list.
-///
-/// @param {*} $first-item - The first item for the comparison.
-/// @param {*} $second-item - The second item for the comparison.
-/// @ignore @param {Number} $center - Irrelevant for this function.
-/// @return {Number}
-///
-/// @access private
-/// @require $_order
-///
-@function _default-compare($first-item, $second-item, $center)
-
-	@if $first-item == null
-		@return 1
-
-	@if $second-item == null
-		@return -1
-
-	$first-item: '"#{$first-item}"'
-	$second-item: '"#{$second-item}"'
-
-	@for $i from 1 through math.min(string.length($first-item), string.length($second-item))
-		$first-index: list.index($_order, string.slice($first-item, $i, $i))
-		$second-index: list.index($_order, string.slice($second-item, $i, $i))
-
-		// The first item is not with the support UTF-16 range.
-		@if not $first-index
-			@return 1
-
-		// The second item is not with the support UTF-16 range.
-		@if not $second-index
-			@return -1
-
-		// Both items are found in the range, return the difference of the indexes of the characters.
-		@if $first-index != $second-index
-			@return $first-index - $second-index
-
-	// Both items are equal
-	@return 0
-
-
-///
-/// Used to compare two non-null list items by converting them to strings and comparing strings in descending UTF-16 code units order from `feff0020` to `feff007e`. For example, 'banana' comes before 'cherry'. In a numeric sort, 9 comes before 80, but because numbers are converted to strings, '80' comes before '9' in the Unicode order. All null items are sorted to the end of the list.
-///
-/// @param {*} $first-item - The first item for the comparison.
-/// @param {*} $second-item - The second item for the comparison.
-/// @ignore @param {Number} $center - Irrelevant for this function.
-/// @return {Number}
-///
-/// @access private
-/// @require _default-compare
-///
-@function _default-compare-desc($first-item, $second-item, $center)
-	@return _default-compare($second-item, $first-item, $center)
-
-
-///
-/// Used to compare two list items as numbers in ascending sort.
-///
-/// @param {*} $first-item - The first item for the comparison.
-/// @param {*} $second-item - The second item for the comparison.
-/// @param {Number} $center - The value indicating the center (zero) position between positive and negative values.
-/// @return {Number}
-///
-/// @throw `#{$first-item}` is not a number.
-/// @throw `#{$second-item}` is not a number.
-///
-/// @access private
-/// @require internal.$exception-function
-/// @require internal.exception-type
-///
-@function _numeric-compare($first-item, $second-item, $center)
-	internal.$exception-function: 'compare-numeric'
-
-	@if meta.type-of($first-item) != 'number'
-		@error internal.exception-type('first-item', $first-item, 'number')
-
-	@if meta.type-of($second-item) != 'number'
-		@error internal.exception-type('second-item', $second-item, 'number')
-
-	$center-test: math.is-unitless($center)
-	$first-test: math.is-unitless($first-item)
-	$second-test: math.is-unitless($second-item)
-
-	// Strip units -OR- normalize units for incompatible and unitless numbers
-	@if $center-test and not $first-test or $first-test or not math.compatible($first-item, $center)
-		$first-item: math.div($first-item, $first-item * 0 + 1) * ($center + 1)
-
-	@if $center-test and not $second-test or $second-test or not math.compatible($second-item, $center)
-		$second-item: math.div($second-item, $second-item * 0 + 1) * ($center + 1)
-
-	@return $first-item - $second-item
-
-
-///
-/// Used to compare two list items as numbers in descending sort.
-///
-/// @param {*} $first-item - The first item for the comparison.
-/// @param {*} $second-item - The second item for the comparison.
-/// @param {Number} $center - The value indicating the center (zero) position between positive and negative values.
-/// @return {Number}
-///
-/// @access private
-/// @require _numeric-compare
-///
-@function _numeric-compare-desc($first-item, $second-item, $center)
-	@return _numeric-compare($second-item, $first-item, $center)
-
-
-///
-/// The default comparison method used by the sort function.
-///
-/// @type Function
-///
-/// @access public
-/// @require _default-compare
-///
-$compare: meta.get-function('_default-compare')
-
-
-///
-/// The default descending comparison method used by the sort function.
-///
-/// @type Function
-///
-/// @access public
-/// @require _default-compare-desc
-///
-$compare-desc: meta.get-function('_default-compare-desc')
-
-
-///
-/// The numeric comparison method used by the sort function.
-///
-/// @type Function
-///
-/// @access public
-/// @require _numeric-compare
-///
-$compare-numeric: meta.get-function('_numeric-compare')
-
-
-///
-/// The numeric descending comparison method used by the sort function.
-///
-/// @type Function
-///
-/// @access public
-/// @require _numeric-compare-desc
-///
-$compare-numeric-desc: meta.get-function('_numeric-compare-desc')
 
 
 ///
