--- a/src/list/compare/_numeric.sass
+++ b/src/list/compare/_numeric.sass
@@ -11,11 +11,11 @@
 
 
 ///
-/// Used to compare two list items as numbers in ascending sort.
+/// Used to compare two list items as numbers in ascending order.
 ///
 /// @param {*} $first-item - The first item for the comparison.
 /// @param {*} $second-item - The second item for the comparison.
-/// @param {Number} $center - The value indicating the center (zero) position between positive and negative values. Based on either the specified center value or the first non-unitless value in the source list or zero, incompatible values will be automatically transformed into compatibility for comparison.
+/// @param {Number} $center - The value indicating the center (zero) position between positive and negative values.
 /// @return {Number}
 ///
 /// @throw `#{$first-item}` is not a number.
@@ -49,11 +49,11 @@
 
 
 ///
-/// Used to compare two list items as numbers in descending sort.
+/// Used to compare two list items as numbers in descending order.
 ///
 /// @param {*} $first-item - The first item for the comparison.
 /// @param {*} $second-item - The second item for the comparison.
-/// @param {Number} $center - The value indicating the center (zero) position between positive and negative values. Based on either the specified center value or the first non-unitless value in the source list or zero, incompatible values will be automatically transformed into compatibility for comparison.
+/// @param {Number} $center - The value indicating the center (zero) position between positive and negative values.
 /// @return {Number}
 ///
 /// @access private
