Shift non-numeric values instead of erroring

--- a/src/list/compare/_numeric.sass
+++ b/src/list/compare/_numeric.sass
@@ -7,32 +7,25 @@
 
 @use 'sass:math'
 @use 'sass:meta'
-@use '../../internal'
 
 
 ///
-/// Used to compare two list items as numbers in ascending order.
+/// Used to compare two list items as numbers in ascending order. All non-numeric items are shifted right.
 ///
 /// @param {*} $first-item - The first item for the comparison.
 /// @param {*} $second-item - The second item for the comparison.
 /// @param {Number} $center - The value indicating the center (zero) position between positive and negative values.
 /// @return {Number}
 ///
-/// @throw `#{$first-item}` is not a number.
-/// @throw `#{$second-item}` is not a number.
-///
 /// @access private
-/// @require internal.$exception-function
-/// @require internal.exception-type
 ///
 @function _numeric($first-item, $second-item, $center)
-	internal.$exception-function: '_numeric'
 
 	@if meta.type-of($first-item) != 'number'
-		@error internal.exception-type('first-item', $first-item, 'number')
+		@return 1
 
 	@if meta.type-of($second-item) != 'number'
-		@error internal.exception-type('second-item', $second-item, 'number')
+		@return -1
 
 	$center-test: math.is-unitless($center)
 	$first-test: math.is-unitless($first-item)
@@ -49,7 +42,7 @@
 
 
 ///
-/// Used to compare two list items as numbers in descending order.
+/// Used to compare two list items as numbers in descending order. All non-numeric items are shifted left.
 ///
 /// @param {*} $first-item - The first item for the comparison.
 /// @param {*} $second-item - The second item for the comparison.
